Add city search from Api, coordinate store, and hourly forecast view

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,17 +16,21 @@ body {
     font-style: normal;
     font-size: 1rem;
     color: $main-color;
+    background: url('../assets/bg.jpg');
+
+    @include scrollbars(4px, 4px, rgba(white, 0.5), #000064);
 }
 .app {
+    max-width: 75rem;
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
     gap: 2rem;
-    background: url('../assets/bg.jpg');
     object-fit: cover;
     object-position: center;
-    padding: 2rem 4rem;
+    padding: 2rem 2rem;
 }
 
 .forecast-title {
@@ -39,4 +43,44 @@ body {
     -webkit-text-fill-color: transparent;
     background-clip: text;
     color: transparent;
+}
+
+.note {
+    border-radius: 1rem;
+    border: 1px $error-color solid;
+    text-align: center;
+    padding: 1rem;
+    &_error {
+        color: $error-color;
+        border: 1px $error-color solid;
+    }
+    &_info {
+        color: white;
+        border: 1px white solid;
+    }
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #fff;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: spin 1s linear infinite;
+    &_small {
+        width: 24px;
+        height: 24px;
+        border-width: 2px;
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
