--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @use 'mixins.scss' as *;
+@use 'variables.scss' as *;
 @forward 'global.scss';
 
 /* -------------------------------------------------------------------------- */
@@ -48,7 +49,7 @@
         }
     }
     &__drop {
-        display: none;
+        //display: none;
         position: absolute;
         top: calc(100% + 1rem);
         width: 100%;
@@ -57,6 +58,9 @@
         border-radius: 1rem;
     }
     &__result {
+        padding-right: 0.5rem;
+        display: grid;
+        gap: 0.5rem;
         max-height: 16rem;
         overflow: auto;
         @include scrollbars(4px, 4px, white, transparent);
@@ -67,11 +71,23 @@
             padding: 1rem;
             border-radius: 0.75rem;
             transition: all 0.3s;
-
+            background: rgba(white, 0.05);
             @include hover {
                 background: rgba(white, 0.1);
             }
         }
+    }
+    &__load {
+        padding: 1rem;
+        justify-content: center;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+    &__no-results {
+        text-align: center;
+        color: $error-color;
     }
 }
 
@@ -169,12 +185,37 @@
 /* -------------------------------------------------------------------------- */
 /*                              forecast-by-hours                             */
 /* -------------------------------------------------------------------------- */
-
 .forecast-by-hours {
-    background: rgba(white, 0.2);
-    padding: 1rem;
-    border-radius: 1rem;
-
+    &__tab-btns {
+        display: flex;
+        gap: 1rem;
+    }
+    &__tabs-btn {
+        border: 1px rgba(white, 0.2) solid;
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 0.75rem;
+        transition: all 0.3s;
+        svg {
+            font-size: 1.125rem;
+        }
+        &_active {
+            background: rgba(white, 0.2);
+        }
+        @include hover {
+            background: rgba(white, 0.2);
+        }
+    }
+    &__tab-content {
+        padding: 2rem 0;
+    }
+    &__chart {
+        height: 18.75rem;
+        width: 100%;
+    }
     &__list {
         display: flex;
         align-items: center;
