--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
-@use 'reset.scss' as *;
 @use 'variables.scss' as *;
 @use 'mixins.scss' as *;
+@forward 'reset.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
@@ -45,14 +45,22 @@ body {
     color: transparent;
 }
 
+.app-error {
+    margin: auto;
+}
+
 .note {
+    line-height: 1.5;
     border-radius: 1rem;
-    border: 1px $error-color solid;
     text-align: center;
     padding: 1rem;
     &_error {
         color: $error-color;
         border: 1px $error-color solid;
+    }
+    &_warning {
+        color: $warning-color;
+        border: 1px $warning-color solid;
     }
     &_info {
         color: white;
@@ -76,11 +84,29 @@ body {
     }
 }
 
+.app-loader {
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    inset: 0;
+    background: rgba(black, 0.5);
+    backdrop-filter: blur(5px);
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
     }
     100% {
         transform: rotate(360deg);
+    }
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
