--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,8 +17,10 @@ body {
     font-size: 1rem;
     color: $main-color;
     background: url('../assets/bg.jpg');
-
     @include scrollbars(4px, 4px, rgba(white, 0.5), #000064);
+}
+b {
+    font-weight: bold;
 }
 .app {
     max-width: 75rem;
@@ -31,6 +33,9 @@ body {
     object-fit: cover;
     object-position: center;
     padding: 2rem 2rem;
+    @include md {
+        padding: 1rem;
+    }
 }
 
 .forecast-title {
@@ -43,6 +48,20 @@ body {
     -webkit-text-fill-color: transparent;
     background-clip: text;
     color: transparent;
+    @include sm {
+        margin-inline: auto;
+    }
+}
+
+svg {
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+}
+.WIcon {
+    path {
+        fill: currentColor;
+    }
 }
 
 .app-error {
