--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -29,6 +29,12 @@ h6 {
     outline: none;
 }
 
+a:focus-visible,
+button:focus-visible,
+select:focus-visible {
+    outline: 1px rgb(255, 255, 255, 0.6) solid;
+}
+
 a {
     color: inherit;
 }
